--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>MANS</title>
+    <title>Portfolio | Chester</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -528,8 +528,16 @@
             <p>A joyful stream called Beautiful Alegria dances through their land, cascading in countless gentle falls, bringing with it the life-giving essence of nature.</p>
           </div>
         </div>
-
-        <div class="row d-flex contact-info mb-5">
+					<div class="iframe-container" style="width: 100%; height: 450px; display: flex; justify-content: center;  ">
+							<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1617.8773998378372!2d123.8478837547453!3d10.274095393103982!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sph!4v1732587682952!5m2!1sen!2sph" 
+											width="1000" 
+											height="450" 
+											allowfullscreen="" 
+											loading="lazy" 
+											referrerpolicy="no-referrer-when-downgrade">
+							</iframe>
+					</div>
+        <div class="row d-flex contact-info ">
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
           	<div class="align-self-stretch box p-4 text-center">
           		<div class="icon d-flex align-items-center justify-content-center">
