--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
 			           <h2 class="mb-4 typewriter">
 											A <span id="job-title"></span>
 										</h2>
-			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="https://guitar-tab-tracker-4e352.web.app/login" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+			            <p>
+										<!-- <a href="#" class="btn btn-primary py-3 px-4">Hire me</a>  -->
+										<a href="https://guitar-tab-tracker-4e352.web.app/login" class="btn btn-white btn-outline-white py-3 px-4">My works</a>
+									</p>
 		            </div>
 		          </div>
 	        	</div>
