adding intern span

--- a/index.html
+++ b/index.html
@@ -138,14 +138,16 @@
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
 								<span class="date">2024-2025</span>
-								<h2>UI/UX Designer</h2>
+								<h1>UI/UX Designer</h1>
+								<h2>Intern <span class="text-muted small">(6 Months)</span></h2>
 								<span class="position">Nap Solutions Inc.</span>
 							</div>
 				  	</div>
 							<div class="col-md-6">
 									<div class="resume-wrap ftco-animate">
 									<span class="date">2024-2025</span>
-									<h2>Front End Developer</h2>
+									<h1>Front End Developer</h1>
+									<h2>Intern <span class="text-muted small">(7 Months)</span></h2>
 									<span class="position">Nap Solutions Inc.</span>
 								</div>
 							</div>
